Changes in version 0.0.6

o MOVE: `add_wording_effects` methods moved from `utils-latentFactoR` to `add_wording_effects-helpers` to facilitate ease of finding code (no observable changes to the user)

o FIX: categories greater than 7 were not previously allowed (they are now)

o FIX: correlations in `EKC` were not used appropriately and led to an error


Changes in version 0.0.5

o FIX: bug in skew when only providing 1 value

o FIX: further correction to `EKC` (uses `cumsum(eigenvalues)` rather than `sum(eigenvalues)`)

o ADD: `add_wording_effects` will add wording effects such as acquiescence, difficulty, random careless, straight line, or some combination of the four to a simulated factor model

o ADD: `ESEM` to perform Exploratory Structural Equation Modeling using {lavaan} (allows wording effects to be estimated)

o FIX: `factor_forest` uses raw data in `psych::fa.parallel` rather than correlation matrix

o ADD: internal functions for computing effect sizes across conditions are included (see `simulation_helpers.R`)

o ADD: skew in `add_local_dependence` is guaranteed to be same direction for locally dependent variables


Changes in version 0.0.4

o FIX: correction to `EKC` (used `factor_forest`'s version of EKC which used reference values rather than eigenvalues); `EKC` uses eigenvalues whereas `factor_forest` uses reference (which was what the random forest model was trained on)

o FIX: cross-loadings with population error are screened for communalities >= 0.80; communalities near 0.90 prior to population error would often get stuck and not converge

o ADD: `skew` argument for continuous data


Changes in version 0.0.3

o ADD: `add_population_error` will add population error, using {bifactor}, to a simulated factor model

o ADD: `data_to_zipfs` to transform data to Zipf's distribution from `simulate_factors`

o ADD: `obtain_zipfs_parameters` to obtain a dataset's best fitting Zipf's distribution parameters
