@@ -1,3 +1,17 @@
+// This function was created with the assistance of GPT-4
+// Much of the template for the code was generated by GPT-4
+// Optimizations were developed after the template to streamline
+// and make the code computationally fast.
+//
+// This implementation of polychoric correlations relies on numerical approximations
+// for the inverse univariate normal CDF and bivariate normal CDF.
+//
+// Inverse Univariate Normal CDF: Beasley-Springer-Moro algorithm
+//
+// Bivariate Normal CDF: Drezner-Wesolowsky approximation
+//
+// Optimization method: Brent's method
+
 // Headers to include
 #include <stdio.h>
 #include <math.h>
@@ -125,31 +139,43 @@ int ending_index(int* frequency){
 }
 
 // Obtain joint frequency table
-int** joint_frequency_table(int* input_data, int rows, int i, int j) {
+int** joint_frequency_table(
+    int* input_data, int rows, int i, int j, int* missing
+) {
 
     // Allocate memory space for table
-    int** joint_frequency = (int**) malloc((CUT) * sizeof(int*));
+    int** joint_frequency = (int**) calloc(CUT, sizeof(int*));
     for (int i = 0; i < CUT; i++) {
         joint_frequency[i] = (int*) calloc(CUT, sizeof(int));
     }
 
-    // Initialize X and Y
-    int X, Y;
+    // Initialize X, Y, and iterator
+    int X, Y, k;
 
     // Populate table
-    for (int k = 0; k < rows; k++) {
+    for (k = 0; k < rows; k++) {
+
+        // Obtain X and Y
         X = input_data[k + i * rows];
         Y = input_data[k + j * rows];
-        joint_frequency[X][Y]++;
+
+        // Check for missing data
+        if(X != 99 && Y != 99){
+            joint_frequency[X][Y]++;
+        }else{
+            (*missing)++;
+        }
+
     }
 
     // Return joint frequency table
     return joint_frequency;
+
 }
 
 // Define structure for return values
 struct ThresholdsResult {
-    int** joint_frequency;
+    double** joint_frequency;
     double* threshold_X;
     double* threshold_Y;
     double* probability_X;
@@ -158,93 +184,155 @@ struct ThresholdsResult {
 };
 
 // Compute thresholds
-struct ThresholdsResult thresholds(int* input_data, int rows, int i, int j) {
+struct ThresholdsResult thresholds(int* input_data, int rows, int i, int j, int empty_method, double empty_value) {
+
+    // Initialize missing
+    int missing = 0;
 
     // Obtain joint frequency table
-    int** joint_frequency_max = joint_frequency_table(input_data, rows, i, j);
+    int** joint_frequency_max = joint_frequency_table(input_data, rows, i, j, &missing);
 
-    // Initialize memory space for frequencies
-    int* frequency_X = (int*) calloc(CUT, sizeof(int));
-    int* frequency_Y = (int*) calloc(CUT, sizeof(int));
+    // Initialize minimum and maximum values for X and Y
+    int min_X = CUT, max_X = 0, min_Y = CUT, max_Y = 0;
 
-    // Obtain frequencies
-    for (int i = 0; i < CUT; i++) {
-        for (int j = 0; j < CUT; j++) {
-            frequency_X[i] += joint_frequency_max[i][j];
-            frequency_Y[j] += joint_frequency_max[i][j];
+    // Loop over joint frequency
+    for(i = 0; i < CUT; i++){
+        for(j = 0; j < CUT; j++){
+
+            // Check for non-zero
+            if(joint_frequency_max[i][j] != 0){
+
+                // Update minimum and maximum
+                if(min_X > i){min_X = i;}
+                if(max_X < i){max_X = i;}
+                if(min_Y > j){min_Y = j;}
+                if(max_Y < j){max_Y = j;}
+
+            }
+
         }
     }
 
     // Find starting and ending index for X and Y
-    int min_X = starting_index(frequency_X);
-    int max_X = ending_index(frequency_X);
-    int min_Y = starting_index(frequency_Y);
-    int max_Y = ending_index(frequency_Y);
     int min_min = fmin(min_X, min_Y);
     int max_max = fmax(max_X, max_Y);
 
     // Allocate new arrays for non-zero frequencies
     int num_elements = max_max - min_min;
 
+    // Initialize zero count
+    int zero_count = 0;
+    int frequency_value;
+
     // Allocate memory space for table
-    int** joint_frequency = (int**) malloc((num_elements + 1) * sizeof(int*));
-    for (int i = 0; i <= num_elements; i++) {
-        joint_frequency[i] = (int*) calloc(num_elements + 1, sizeof(int));
+    double** joint_frequency = (double**) malloc((num_elements + 1) * sizeof(double*));
+    for (i = 0; i <= num_elements; i++) {
+        joint_frequency[i] = (double*) calloc(num_elements + 1, sizeof(double));
     }
 
     // Populate table
-    for (int i = 0; i <= num_elements; i++) {
-        for(int j = 0; j <= num_elements; j++)
-        joint_frequency[i][j] = joint_frequency_max[i + min_min][j + min_min];
+    for (i = 0; i <= num_elements; i++) {
+        for(j = 0; j <= num_elements; j++){
+
+            // Obtain frequency value
+            frequency_value = joint_frequency_max[i + min_min][j + min_min];
+
+            // Fill table
+            joint_frequency[i][j] = frequency_value;
+
+            // Check for non-zero
+            if(frequency_value == 0){
+                zero_count++;
+            }
+
+        }
     }
 
     // Free memory
-    for (int i = 0; i < CUT; ++i) {
+    for (i = 0; i < CUT; ++i) {
         free(joint_frequency_max[i]);
     }
     free(joint_frequency_max);
 
-    // Initialize non-zero elements
-    int* non_zero_freq_X = (int*) malloc(num_elements * sizeof(int));
-    int* non_zero_freq_Y = (int*) malloc(num_elements * sizeof(int));
+    // Check for zero cells
+    if(zero_count > 0){
 
-    // Copy non-zero elements for X
-    for (int i = 0; i < num_elements; i++) {
-        non_zero_freq_X[i] = frequency_X[min_min + i];
-        non_zero_freq_Y[i] = frequency_Y[min_min + i];
+        // If there are zero cells, check method
+        if(empty_method != 0){
+
+            // Initialize added value
+            double added_value;
+
+            // Check for one over method
+            if(empty_value > 1.0){
+
+                // Determine empty value based on empty method (following `Turbofuns::PolychoricRM` in R)
+                added_value = (double) 1 / (((max_X - min_X) + 1) * ((max_Y - min_Y) + 1));
+
+            }else{ // Set added value
+                added_value = empty_value;
+            }
+
+            // Update joint frequency table
+            for (i = 0; i <= num_elements; i++) {
+                for(j = 0; j <= num_elements; j++){
+
+                    // Obtain frequency value
+                    frequency_value = joint_frequency_max[i + min_min][j + min_min];
+
+                    // Check for method
+                    if(empty_method == 1 && frequency_value == 0){
+                        joint_frequency[i][j] += added_value;
+                    }else if(empty_method == 2){
+                        joint_frequency[i][j] += added_value;
+                    }
+
+                }
+            }
+
+        }
+
     }
 
-    // Free the memory for frequency_X and frequency_Y
-    free(frequency_X);
-    free(frequency_Y);
+    // Initialize memory space for frequencies
+    double* frequency_X = (double*) calloc(num_elements + 1, sizeof(double));
+    double* frequency_Y = (double*) calloc(num_elements + 1, sizeof(double));
+
+    // Obtain frequencies
+    for (i = 0; i <= num_elements; i++) {
+        for (j = 0; j <= num_elements; j++) {
+            frequency_X[i] += joint_frequency[i][j];
+            frequency_Y[j] += joint_frequency[i][j];
+        }
+    }
 
     // Initialize memory space for probabilities and thresholds
-    double* probability_X = (double*) malloc((num_elements) * sizeof(double));
-    double* probability_Y = (double*) malloc((num_elements) * sizeof(double));
-    double* threshold_X = (double*) malloc((num_elements) * sizeof(double));
-    double* threshold_Y = (double*) malloc((num_elements) * sizeof(double));
+    double* probability_X = (double*) malloc(num_elements * sizeof(double));
+    double* probability_Y = (double*) malloc(num_elements * sizeof(double));
+    double* threshold_X = (double*) malloc(num_elements * sizeof(double));
+    double* threshold_Y = (double*) malloc(num_elements * sizeof(double));
 
     // Compute probabilities
-    for(int i = 0; i < num_elements; i++) {
-        probability_X[i] = (double) non_zero_freq_X[i] / rows;
-        probability_Y[i] = (double) non_zero_freq_Y[i] / rows;
+    for(i = 0; i < num_elements; i++) {
+        probability_X[i] = (double) frequency_X[i] / (rows - missing);
+        probability_Y[i] = (double) frequency_Y[i] / (rows - missing);
     }
 
     // Compute cumulative sums
-    for (int i = 0; i < num_elements - 1; i++) {
+    for (i = 0; i < num_elements - 1; i++) {
         probability_X[i + 1] += probability_X[i];
         probability_Y[i + 1] += probability_Y[i];
     }
 
     // Obtain thresholds
-    for (int i = 0; i < num_elements; i++) {
+    for (i = 0; i < num_elements; i++) {
         threshold_X[i] = bsm_inverse_cdf(probability_X[i]);
         threshold_Y[i] = bsm_inverse_cdf(probability_Y[i]);
     }
 
-    // Free memory
-    free(non_zero_freq_X);
-    free(non_zero_freq_Y);
+    // Free the memory for frequency_X and frequency_Y
+    free(frequency_X);
+    free(frequency_Y);
 
     // Create structure for return values
     struct ThresholdsResult result;
@@ -257,6 +345,7 @@ struct ThresholdsResult thresholds(int* input_data, int rows, int i, int j) {
 
     // Return
     return result;
+
 }
 
 // Error function
@@ -397,7 +486,7 @@ double drezner_bivariate_normal(double h1, double h2, double rho, double p1, dou
 
 // Estimate log-likelihood
 double polychoric_log_likelihood(
-    double rho, int** joint_frequency,
+    double rho, double** joint_frequency,
     double* threshold_X, double* threshold_Y,
     double* probability_X, double* probability_Y,
     int num_elements
@@ -470,8 +559,8 @@ double polychoric_log_likelihood(
 }
 
 // Brent's method for optimization
-double optimize(double (*f)(double, int**, double*, double*, double*, double*, int),
-                int** joint_frequency, double* threshold_X, double* threshold_Y,
+double optimize(double (*f)(double, double**, double*, double*, double*, double*, int),
+                double** joint_frequency, double* threshold_X, double* threshold_Y,
                 double* probability_X, double* probability_Y,
                 int num_elements,
                 double lower, double upper, double tol, int max_iter
@@ -588,10 +677,10 @@ double optimize(double (*f)(double, int**, double*, double*, double*, double*, i
 }
 
 // Compute polychoric correlation
-double polychoric(int* input_data, int rows, int i, int j) {
+double polychoric(int* input_data, int rows, int i, int j, int empty_method, double empty_value) {
 
     // Obtain joint frequency table, probability_X, and probability_Y from thresholds function
-    struct ThresholdsResult thresholds_result = thresholds(input_data, rows, i, j);
+    struct ThresholdsResult thresholds_result = thresholds(input_data, rows, i, j, empty_method, empty_value);
 
     // Initialize parameters for optimization
     double lower = -1.0;
@@ -624,16 +713,13 @@ double polychoric(int* input_data, int rows, int i, int j) {
 }
 
 // The updated polychoric_correlation_matrix function
-double** polychoric_correlation_matrix(int* input_data, int rows, int cols) {
+double* polychoric_correlation_matrix(int* input_data, int rows, int cols, int empty_method, double empty_value) {
 
     // Initialize iterators
     int i, j;
 
-    // Allocate memory for polychoric_matrix
-    double** polychoric_matrix = malloc(cols * sizeof(double*));
-    for (i = 0; i < cols; i++) {
-      polychoric_matrix[i] = malloc(cols * sizeof(double)); // Change rows to cols
-    }
+    // Allocate memory for polychoric_matrix as a 1D array
+    double* polychoric_matrix = malloc(cols * cols * sizeof(double));
 
     // Perform polychoric correlations over the input_matrix
     for (i = 0; i < cols; i++) {
@@ -644,91 +730,48 @@ double** polychoric_correlation_matrix(int* input_data, int rows, int cols) {
             // Fill diagonal
             if (i == j) {
 
-                polychoric_matrix[i][j] = 1;
+                polychoric_matrix[i * cols + j] = 1;
 
             }else if (i > j) { // Fill lower triangle
 
                 // Compute correlation
                 double correlation = polychoric(
-                    input_data, rows, i, j
+                    input_data, rows, i, j, empty_method, empty_value
                 );
 
                 // Add to matrix
-                polychoric_matrix[i][j] = correlation;
+                polychoric_matrix[i * cols + j] = correlation;
 
                 // Fill opposite of triangle
-                polychoric_matrix[j][i] = correlation;
+                polychoric_matrix[j * cols + i] = correlation;
 
             }
         }
     }
 
-    // return 0
-
     return polychoric_matrix;
 }
 
-SEXP r_polychoric_correlation_matrix(SEXP r_input_matrix) {
+SEXP r_polychoric_correlation_matrix(SEXP r_input_matrix, SEXP r_empty_method, SEXP r_empty_value) {
 
     int rows = nrows(r_input_matrix);
     int cols = ncols(r_input_matrix);
 
     // Call the C function
-    double** c_result = polychoric_correlation_matrix(INTEGER(r_input_matrix), rows, cols);
+    double* c_result = polychoric_correlation_matrix(INTEGER(r_input_matrix), rows, cols, INTEGER(r_empty_method)[0], REAL(r_empty_value)[0]);
 
     // Convert the C result to an R matrix
     SEXP r_result = PROTECT(allocMatrix(REALSXP, cols, cols));
     for (int i = 0; i < cols; i++) {
         for (int j = 0; j < cols; j++) {
-            REAL(r_result)[i + cols * j] = c_result[i][j];
+            REAL(r_result)[i + cols * j] = c_result[i + cols * j];
         }
     }
 
     // Free the C result memory
-    for (int i = 0; i < cols; i++) {
-        free(c_result[i]);
-    }
     free(c_result);
 
     UNPROTECT(1);
     return r_result;
 
 }
-
-// To compile as a shared library on Linux
-//
-// R CMD SHLIB polychoric_matrix.c -o polychoric_matrix.so
-//
-// To compile as a shared library on Max (through Linux)
-//
-// R CMD SHLIB polychoric_matrix.c -o polychoric_matrix.dylib
-//
-// To compile as a shared library on Windows
-//
-// R CMD SHLIB polychoric_matrix.c -o polychoric_matrix.dll
-
-//    // Print matrix
-//    for (i = 0; i < cols; i++) {
-//        for (j = 0; j < cols; j++) { // Changed from 'rows' to 'cols'
-//            printf("%f ", matrix[i][j]);
-//        }
-//        printf("\n");
-//    }
-//
-//    // Free allocated matrix memory
-//    for (i = 0; i < cols; i++) {
-//        free(matrix[i]);
-//    }
-//    free(matrix);
-//
-//    // Print vector
-//    for (j = i; i < cols; i++) {
-//        printf("%f ", vector[i]);
-//    }
-//
-//    // Free allocated matrix memory
-//    free(vector);
-//
-//    // Print value
-//    printf("%f ", value);
-//
